Tweak post detail page formatting. Fix truncation bug. Import old posts.

--- a/static/css/main_new.less
+++ b/static/css/main_new.less
@@ -434,7 +434,7 @@ a.sub-comments {
       }
     }
     .content {
-      margin: 30px 0px 0px 0px;
+      margin: 40px 0px 0px 0px;
       a {
         color: #628b0b;
       }
