--- a/ui/modules/post_footer/main.less
+++ b/ui/modules/post_footer/main.less
@@ -1,4 +1,5 @@
 .post_footer {
+  margin-top: 35px;
   border-top: 1px solid #EEE;
   border-bottom: 1px solid #EEE;
   height: 40px;
